--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,15 @@
 services:
   - type: web
     name: cafeteria-admin
-    env: php
+    runtime: php
     plan: free
     buildCommand: |
       composer install --no-dev --optimize-autoloader
+      npm install
+      npm run build
       php artisan config:cache
       php artisan route:cache
       php artisan view:cache
-      npm install
-      npm run build
     startCommand: |
       php artisan migrate --force
       php artisan serve --host=0.0.0.0 --port=$PORT
